Fix layout issues in Safari

--- a/ui/seznam.cz-2020/app.css
+++ b/ui/seznam.cz-2020/app.css
@@ -20,6 +20,8 @@
 }
 
 :local(.primaryContent) {
+  display: contents; /* Safari layout fix */
+
   position: relative;
 
   flex-grow: 1;
