--- a/ui/seznam.cz-2020/modalContent/modalContentWithBottomCloseButton.css
+++ b/ui/seznam.cz-2020/modalContent/modalContentWithBottomCloseButton.css
@@ -3,6 +3,7 @@
 
   width: 100%;
   height: 100%;
+  flex: 1 1 auto;
 }
 
 :local(.content) {
