--- a/ui/seznam.cz-2020/modalContentHost.css
+++ b/ui/seznam.cz-2020/modalContentHost.css
@@ -156,6 +156,7 @@
 
 :local(.content) {
   width: 100%;
+  height: 100%;
   flex: 1 1 auto;
   overflow: auto;
 }
